@@ -1,3 +1,9 @@
+2009-10-19  Teika kazura <teika@lavabit.com>
+	* OPTIONS
+	* lisp/sawfish/wm/ext/apps-menu.jl
+	* man/news.texi
+	* man/sawfish.texi: Completed doc updates for applications menu.
+
 2009-10-17  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/apps-menu.jl: removed dupped Development Category from Developmentmenu
 	                                    added Editors Category to Developmentmenu
